[package]
name = "axum-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.75"
axum = { version = "0.7.2", features = ["macros"] }
lazy-regex = "3.1.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
strum_macros = "0.25.3"
tokio = { version = "1.35.1", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.0", features = ["fs"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1.0.76"
httpc-test = "0.1.8"
